--- a/templates/bower.json
+++ b/templates/bower.json
@@ -1,5 +1,5 @@
 /**
- * Install bower components.
+ * Install bower components gulp task.
  *
  * ---------------------------------------------------------------
  *
