changed wrong file

--- a/templates/bower.json
+++ b/templates/bower.json
@@ -1,21 +1,11 @@
-/**
- * Install bower components gulp task.
- *
- * ---------------------------------------------------------------
- *
- * Installs bower components and copies the required files into the assets folder structure.
- *
- */
-
-module.exports = function(gulp, plugins) {
-	gulp.task('bower', function() {
-		var install = plugins.bower()
-				.pipe(gulp.dest('./bower_components'))
-				.pipe(plugins.notify({ message: 'Bower install task complete' }));
-	
-		var copy = gulp.src('./bower_components/**/*.min.*')
-				.pipe(gulp.dest('./assets/vendor'))
-				.pipe(plugins.notify({ message: 'Bower copy task complete' }));
-		return plugins.stream(install, copy);
-	});
-};
+-{
+-  "ignore": [
+-    "**/.*",
+-    "node_modules",
+-    "bower_components",
+-    "test",
+-    "tests"
+-  ],
+-  "dependencies": {
+-  }
+-}
