--- a/templates/bower.json
+++ b/templates/bower.json
@@ -1,11 +1,11 @@
--{
--  "ignore": [
--    "**/.*",
--    "node_modules",
--    "bower_components",
--    "test",
--    "tests"
--  ],
--  "dependencies": {
--  }
--}
+{
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+  }
+}
