--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sails-generate-bower-gulp",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "Add bower support for Sails when using gulp.",
   "main": "lib/index.js",
   "homepage": "http://github.com/karnith/sails-generate-bower-gulp",
@@ -18,8 +18,8 @@
   "author": "Karnith",
   "license": "MIT",
   "dependencies": {
-  	"lodash": ">=2.4.x",
-  	"merge-defaults": ">=0.1.0"
+  	"lodash": "*",
+  	"merge-defaults": "*"
   },
   "devDependencies": {
     "sails-generate": "*",
@@ -36,6 +36,6 @@
   "sailsGenerator": {
     "type": "bower",
     "behavior": "overrides `sails generate bower`",
-    "sailsVersion": "~0.10.0"
+    "sailsVersion": "~0.11.0"
   }
 }
